# generic-sycl-components

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: scorecard.yml
onemath/sycl/blas/: CMakeLists.txt  README.md
onemath/sycl/blas/cmake/: config.cmake.in
onemath/sycl/blas/doc/: AddingBlas3Op.md  Gemm.md  MissingFeatures.md  Reduction.md
onemath/sycl/blas/include/: blas_meta.h  helper.h  onemath_sycl_blas.h
onemath/sycl/blas/include/container/: sycl_iterator.h
onemath/sycl/blas/include/interface/: blas1_interface.h  blas2_interface.h  blas3_interface.h  extension_interface.h  gemm_launcher.h
onemath/sycl/blas/include/operations/: blas1_trees.h  blas2_trees.h  blas3_trees.h  blas_constants.h  blas_operators.h
onemath/sycl/blas/include/operations/extension/: axpy_batch.h  matcopy_batch.h  reduction.h  transpose.h
onemath/sycl/blas/include/sb_handle/: handle.h  kernel_constructor.h  temp_memory_pool.h
onemath/sycl/blas/include/views/: view.h
onemath/sycl/blas/src/: CMakeLists.txt  onemath_sycl_blas.hpp
onemath/sycl/blas/src/container/: sycl_iterator.hpp
onemath/sycl/blas/src/interface/: CMakeLists.txt  blas1_interface.hpp  blas2_interface.hpp  blas3_interface.hpp  extension_interface.hpp  gemm_interface.hpp  gemm_launcher.hpp  symm_interface.hpp  trsm_interface.hpp
onemath/sycl/blas/src/interface/blas1/backend/: amd_gpu.hpp  backend.hpp  default.hpp  intel_gpu.hpp  nvidia_gpu.hpp
onemath/sycl/blas/src/interface/blas2/backend/: amd_gpu.hpp  backend.hpp  default.hpp  intel_gpu.hpp  nvidia_gpu.hpp
onemath/sycl/blas/src/interface/blas3/backend/: amd_gpu.hpp  backend.hpp  default.hpp  intel_gpu.hpp  nvidia_gpu.hpp
onemath/sycl/blas/src/interface/extension/: CMakeLists.txt
onemath/sycl/blas/src/interface/extension/backend/: amd_gpu.hpp  backend.hpp  default.hpp  intel_gpu.hpp  nvidia_gpu.hpp
onemath/sycl/blas/src/operations/: blas1_trees.hpp  blas2_trees.hpp  blas3_trees.hpp  blas_constants.hpp  blas_operators.hpp
onemath/sycl/blas/src/operations/blas1/: IndexMaxMin.hpp  WGAtomicReduction.hpp
onemath/sycl/blas/src/operations/blas2/: gbmv.hpp  gemv.hpp  ger.hpp  sbmv.hpp  spr.hpp  tbmv.hpp  txsv.hpp  xpmv.hpp
onemath/sycl/blas/src/operations/blas3/: gemm_common.hpp  gemm_interleaved.hpp  gemm_load_store.hpp  gemm_load_store_complex.hpp  gemm_load_store_joint_matrix.hpp  gemm_local.hpp  gemm_local_joint_matrix.hpp  gemm_no_local_full_vec.hpp  gemm_no_local_partial_vec.hpp  gemm_partial_local.hpp  gemm_ref.hpp  trsm.hpp
onemath/sycl/blas/src/operations/extension/: axpy_batch.hpp  matcopy_batch.hpp  reduction.hpp  transpose.hpp
onemath/sycl/blas/src/sb_handle/: handle.hpp  kernel_constructor.hpp  temp_memory_pool.hpp
onemath/sycl/blas/src/views/: view.hpp  view_sycl.hpp
